--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,2 +1,13 @@
 @import "./variables";
 @import "./normalise";
+
+@import "./layout";
+
+body {
+  font-family: "Inter", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
