--- a/src/components/ResumeContainer.scss
+++ b/src/components/ResumeContainer.scss
@@ -9,9 +9,19 @@
     margin-left: auto;
     margin-right: auto;
 
-    box-shadow: 5px 10px 20px #dddddd;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-    padding: 30px;
-    background-color: white;
+    .link {
+    }
+
+    .card {
+      width: 90%;
+      box-shadow: 5px 10px 20px #dddddd;
+
+      padding: 30px;
+      background-color: white;
+    }
   }
 }
